force-app/main/default/objects/Product_Sharing__c/Product_Sharing__c.object-meta.xml
<CustomObject>
    <description>Defines the visibility/sharing scope of a Product (SKU) by channel, state, branch and/or distributor.</description>
    <label>Product Sharing</label>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Product Sharing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Sharings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>