force-app/main/default/objects/Product_Sharing__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Channel this sharing rule applies to.</description>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GT</fullName>
            </value>
            <value>
                <fullName>MT</fullName>
            </value>
            <value>
                <fullName>E-Commerce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>