force-app/main/default/objects/Product_Sharing__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <description>Distributor account this sharing rule applies to.</description>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Sharings</relationshipLabel>
    <relationshipName>Product_Sharings</relationshipName>
    <type>Lookup</type>
</CustomField>