force-app/main/default/objects/Product_Sharing__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When unchecked, this sharing rule is ignored.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>