force-app/main/default/objects/Product_Sharing__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product (SKU)</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Sharings</relationshipLabel>
    <relationshipName>Product_Sharings</relationshipName>
    <type>Lookup</type>
</CustomField>