force-app/main/default/objects/Product_Sharing__c/fields/Visibility_Level__c.field-meta.xml
<CustomField>
    <fullName>Visibility_Level__c</fullName>
    <description>Scope at which the product is shared/visible.</description>
    <label>Visibility Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>National</fullName><default>false</default><label>National</label></value>
            <value><fullName>Channel</fullName><default>false</default><label>Channel</label></value>
            <value><fullName>State</fullName><default>false</default><label>State</label></value>
            <value><fullName>Branch</fullName><default>false</default><label>Branch</label></value>
            <value><fullName>Distributor</fullName><default>false</default><label>Distributor</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>