force-app/main/default/objects/Product_Sharing__c/validationRules/Product_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Required</fullName>
    <active>true</active>
    <description>Every Product Sharing row must reference a Product (SKU).</description>
    <errorConditionFormula>ISBLANK(Product__c)</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>Product (SKU) is required.</errorMessage>
</ValidationRule>